--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </p>
       </div>
       <div data-aos="flip-right" class="timeline-item item-4">
-        <h2>Company Name 4  </h2>
+        <h2>Caltex </h2>
         <p>
           Manager-(021)4642122
         </p>
